--- a/styles/byui.css
+++ b/styles/byui.css
@@ -1,28 +1,52 @@
-body{
-    text-align: center;
-}
-
-nav {
+/** {
+    border: 2px solid blue;
+}*/
+/*header styles*/
+nav, footer {
     background-color: steelblue;
     padding: 10px;
+    text-align: center;
 }
 
 nav a{
     color: white;
     margin: 40px;
     text-decoration: none;
+    font-size: 1.5em;
 }
 
+a:hover{
+    background-color: white;
+    color: steelblue;
+}
+
+/*Main Styles*/
 h1 {
     color: steelblue;
+    text-align: center;
 }
 
 img {
     /*Picture that teacher used on BYUI campus was set to 80%*/
-    width: 25%;
-    border: 4px solid steelblue;
+    width: 20%;
+    /*border: 4px solid steelblue;*/
+    display: block;
+    margin: 0 auto;
+    text-align: center;
 }
 
 p {
-    padding: 10px
+    padding: 10px;
+    width: 80%;
+    text-align: center;
+    margin: 50px auto;
+}
+
+.main-para {
+    font-size: 1.5em;
+}
+
+#active {
+    background-color: white;
+    color: steelblue;
 }
