--- a/styles/byui.css
+++ b/styles/byui.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rock+Salt&display=swap');
+
 /** {
     border: 2px solid blue;
 }*/
@@ -18,21 +20,26 @@ nav a{
 a:hover{
     background-color: white;
     color: steelblue;
+    border-radius: 9px;
 }
 
 /*Main Styles*/
 h1 {
     color: steelblue;
     text-align: center;
+    font-family: "Rock Salt";
+    margin: 50px 0;
 }
 
 img {
     /*Picture that teacher used on BYUI campus was set to 80%*/
     width: 20%;
-    /*border: 4px solid steelblue;*/
+    border: 4px solid steelblue;
     display: block;
     margin: 0 auto;
     text-align: center;
+    border-radius: 9px;
+    box-shadow: 15px 15px 10px #ccc;
 }
 
 p {
@@ -49,4 +56,9 @@ p {
 #active {
     background-color: white;
     color: steelblue;
+}
+
+body {
+    font-family: "Georgia", Serif;
+    margin: 0px;
 }
