--- a/positionstyles.css
+++ b/positionstyles.css
@@ -101,11 +101,11 @@
   grid-template-columns: 1fr 1fr;
 }
 .red4 {
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   background-color: red;
   grid-row: 1/4;
-} 
+}
 .green4 {
   width: 100%; 
   height: 100%; 
@@ -127,50 +127,65 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
   width: 100px; 
   height: 100px; 
-  background-color: green; 
+  background-color: green;
+  float: left;
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 50%; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(6, 100px);
+  /* or you could use repeat(6, 1fr) */
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
+  width: 400px;
+  height: 200px;
+  /* or you could use 100% for everything */
+  background-color: red;
+  grid-column: 1/6;
+  grid-row: 1/3;
+  z-index: -1;
+}
 .green6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-} 
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  grid-column: 1/3;
+  grid-row: 5/7;
+}
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  width: 200px;
+  height: 400px;
+  background-color: gold;
+  grid-column: 5/7;
+  grid-row: 3/7;
+}
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 400px; 
+  height: 400px; 
+  background-color: blue;
+  grid-column: 2/6;
+  grid-row: 2/6;
+  z-index: -1;
 } 
 
 
