--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -12,13 +12,17 @@ nav a {
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
     font-family: 'Rock Salt', 'Mukta', sans-serif;
+}
 
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin: 100px;
 }
 
 .button-box {
     text-align: center;
     font-family: 'Mukta', sans-serif;
-
 }
 
 main {
@@ -47,12 +51,17 @@ nav a:hover, .book:hover, .join:hover {
 
 header {
     background-color: #e4cc21;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 footer {
     background-color: #e4cc21;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #background {
@@ -78,14 +87,14 @@ nav a:hover {
 }
 
 .home-title {
-    color: #063d54;
+    color: #74593e;
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
     font-size: 2em;
     margin-top: 10px;
 }
 
 h4 {
-    color: #063d54;
+    color: #74593e;
     font-family: 'Mukta', sans-serif;
 }
 
@@ -157,21 +166,129 @@ footer h3 a:hover {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
     padding-top: 10px;
 }
 
-.river-card, .camping-card, .rapids-card {
+.rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
 
-.riverforest, .camping, .boat {
+.card-img {
     border: 10px solid black;
+    transition: 1.5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 main section img {
     box-sizing: border-box;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
