--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -253,10 +253,20 @@ nav {
 }
 
 div.faq{
-    text-align: left;
+    margin: auto;
+/*    text-align: left;*/
     Width: 80%;
     text-indent: -2em;
 }
+
+/*margin: auto;
+width: 20%;
+color: #ffffff;
+font-size: 15px;
+padding-top: 30px;
+padding-bottom: 15px;
+padding-left: 30px;
+padding-right: 30px;*/
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
