--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -254,19 +254,44 @@ nav {
 
 div.faq{
     margin: auto;
-/*    text-align: left;*/
     Width: 80%;
     text-indent: -2em;
+    line-height: 1.8;
+    padding-bottom: 2%;
 }
 
-/*margin: auto;
-width: 20%;
-color: #ffffff;
-font-size: 15px;
-padding-top: 30px;
-padding-bottom: 15px;
-padding-left: 30px;
-padding-right: 30px;*/
+#wideriver-image {
+    width: 100%;
+}
+
+div.river-info , div.blog {
+    margin: auto;
+    Width: 80%;
+    text-indent: 2em;
+    line-height: 1.8;
+    padding-bottom: 2%;
+}
+
+div.RatesAndDates {
+    margin: auto;
+    Width: 40%;
+    text-indent: 2em;
+    line-height: 1.5;
+
+}
+
+.river-info h1 {
+    text-align: center;
+}
+
+.river_pic_1, .river_pic_2, .river_pic_3 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
