--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -134,6 +134,7 @@ h2 {
 footer h3 {
     color: #063d54;
     font-family: 'Mukta', sans-serif;
+    margin: auto;
 }
 
 footer a {
@@ -291,6 +292,10 @@ div.RatesAndDates {
     width: 50%;
     padding-top: 2%;
     padding-bottom: 2%;
+}
+
+form {
+    margin-top: 200px;
 }
 
 @media screen and (max-width: 900px) {
