--- a/tips/styles/style.css
+++ b/tips/styles/style.css
@@ -1,8 +1,4 @@
-#content {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
+/* navigation css below*/
 nav {
     grid-template-rows: 1fr;
     display: flex;
@@ -24,8 +20,14 @@ nav a {
     font-size: 1.5em;
 }
 
+/* content css is below*/
 main {
     grid-template-rows: 1fr;
+}
+
+#content {
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 #summary {
@@ -39,11 +41,55 @@ main {
     margin: 50px;
 }
 
+#tips1 {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+#thingstips {
+    display: flex;
+    justify-content: space-around;
+}
+
+#thingstips p h1{
+    width: 60%;
+    margin: 50px;
+}
+
+#thingstips hr{
+    width: 100%;
+}
+
+#gym {
+    display: flex;
+    justify-content: space-around;
+}
+
+#party {
+    display: flex;
+    justify-content: space-around;
+}
+
+#tips2 {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 #pictures {
     display: flex;
     justify-content: space-around;
 }
 
+#pictures img {
+    height: auto;
+    width: 40%
+}
+
+body {
+    margin: 0;
+}
+
+/* footer css is below*/
 footer {
     grid-template-rows: 1fr;
     display: flex;
@@ -66,11 +112,84 @@ footer h3 a:hover {
     border-radius: 15px;
 }
 
-#pictures img {
-    height: auto;
-    width: 40%
-}
+/*CSS that I dont know about*/
 
-body {
-    margin: 0;
-}
+/* Style the Image Used to Trigger the Modal */
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  #myImg:hover {opacity: 0.7;}
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+  
+  /* Modal Content (Image) */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+  
+  /* Caption of Modal Image (Image Text) - Same Width as the Image */
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+  }
+  
+  /* Add Animation - Zoom in the Modal */
+  .modal-content, #caption {
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+  
+  @keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+  }
+  
+  /* The Close Button */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* 100% Image Width on Smaller Screens */
+  @media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
+    }
+  }
