--- a/tips/styles/style.css
+++ b/tips/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display+SC&display=swap');
+
 /* navigation css below*/
 nav {
     grid-template-rows: 1fr;
@@ -65,14 +67,13 @@ main {
     width: 100%;
 }
 
-#gym {
+#gym, #party {
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-#party {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.content-image {
+    width: 100%;
 }
 
 #pictures {
@@ -82,7 +83,7 @@ main {
 
 #pictures img {
     height: auto;
-    width: 40%
+    width: 40%;
 }
 
 body {
